--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,6 +55,7 @@ h1,h2,h3,h4,h5,h6{
 header .navbar-brand{
 	background-image: url(../images/`jimlynLogo.svg);
 	background-repeat: no-repeat;
+	height:auto;
 	//nest .navbar-brand
 	span.subhead{
 		display: block; /*to display on its own line*/
@@ -93,6 +94,13 @@ header .navbar-light .navbar-toggler-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 /* end of header .navbar-brand*/
+
+/*header inbody*/
+header .navbar {
+  padding: 30px 0;
+  transition: all .5s ease-out;
+}
+
 
 /*generic--page*/
 .page{
@@ -344,6 +352,38 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 
 // Medium devices (tablets, 768px and up)
 @media (min-width:768px) {
+	/**  nav inbody **/
+
+header .inbody {
+  background: rgba(104,73,49,.9);
+}
+
+header .navbar.inbody {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+header .navbar.inbody .navbar-nav {
+  padding-top: 10px;
+}
+
+header .inbody .navbar-brand {
+  background-size: 28px;
+  background-position: top left;
+  margin-top: 0px;
+  padding-bottom: 0;
+  margin-left: 10px;
+}
+
+header .inbody .navbar-brand h1 {
+  font-size: 1.1em;
+  padding-left: 35px;
+}
+
+header .inbody .navbar-brand span.subhead {
+  display: none;
+}
+
 
 }
 
