[sass,cs] minur adjustments to style

--- a/css/style.css
+++ b/css/style.css
@@ -285,12 +285,13 @@ span.carousel-control-prev-icon, span.carousel-control-next-icon {
     padding-top: 10px; }
   header .inbody .navbar-brand {
     background-size: 28px;
-    background-position: top left;
+    /*background-position: top left;*/
+    background-position: 3px 3px;
     margin-top: 0px;
     padding-bottom: 0;
     margin-left: 10px; }
   header .inbody .navbar-brand h1 {
     font-size: 1.1em;
-    padding-left: 35px; }
+    padding-left: 40px; }
   header .inbody .navbar-brand span.subhead {
     display: none; } }
