--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,8 +114,8 @@ header .navbar {
 /*end of page*/
 
 /*page -- staff*/
-#staff{
-	background-col: #e4d29d;
+#bio{
+	background-color: #e4d29d;
 	background-image:linear-gradient(to bottom,#e4d29d,#cdae50);
 }
 /*end of page -- staff*/
