--- a/sass/style.scss
+++ b/sass/style.scss
@@ -322,13 +322,21 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 		margin:0 auto;
 		margin-bottom: 1em;
 	}
+	
+	#bio .info h3{
+		text-align: center;
+	}
 
-}
+} /*end of--@media(min-width:300px)*/
 
 
 @media only screen and (min-width:450px)and(max-width:767px){
 	#services p{
 		padding:0 20%;
+	}
+	
+	#bio .info h3{
+		text-align: center;
 	}
 	
 	
