--- a/sass/style.css
+++ b/sass/style.css
@@ -244,14 +244,26 @@ span.carousel-control-prev-icon, span.carousel-control-next-icon {
   height: 30px; }
 
 /*other media*/
-@media (min-width: 300px) {
+@media only screen and (min-width: 300px) and (max-width: 449px) {
   .photo img {
     display: block;
     margin: 0 auto;
-    margin-bottom: 1em; } }
+    margin-bottom: 1.2em; }
+
+  #bio .info h3 {
+    text-align: center; } }
+/*end of--@media(min-width:300px)*/
 @media only screen and (min-width: 450px) and (max-width: 767px) {
   #services p {
-    padding: 0 20%; } }
+    padding: 0 20%; }
+
+  #bio .info h3 {
+    text-align: center; }
+
+  .photo img {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 1.2em; } }
 @media (max-width: 575px) {
   a.navbar-brand {
     /*visibility: hidden;*/
