--- a/sass/style.scss
+++ b/sass/style.scss
@@ -316,11 +316,11 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 }
 
 /*other media*/
-@media(min-width:300px){
+@media only screen and (min-width:300px) and (max-width:449px){
 	.photo img {
 		display:block;
 		margin:0 auto;
-		margin-bottom: 1em;
+		margin-bottom: 1.2em;
 	}
 	
 	#bio .info h3{
@@ -337,6 +337,12 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 	
 	#bio .info h3{
 		text-align: center;
+	}
+	
+	.photo img {
+		display:block;
+		margin:0 auto;
+		margin-bottom: 1.2em;
 	}
 	
 	
