Added subtle style for social media icons on small devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -347,6 +347,14 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 	#bio .info h3{
 		text-align: center;
 	}
+	
+	/*
+	#social media
+	*/
+	nav.socialmediaicons ul {
+    width: 110px;
+    margin: 0 auto;
+	}
 
 	
 
@@ -368,6 +376,14 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
 		margin-bottom: 1.2em;
 	}
 	
+	/*
+	#social media
+	*/
+	nav.socialmediaicons ul {
+    width: 110px;
+    margin: 0 auto;
+	}
+
 	
 }
 
