--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,13 @@ span.carousel-control-prev-icon, span.carousel-control-next-icon {
     margin: 0 auto;
     margin-bottom: 1.2em; }
   #bio .info h3 {
-    text-align: center; } }
+    text-align: center; }
+  /*
+	#social media
+	*/
+  nav.socialmediaicons ul {
+    width: 110px;
+    margin: 0 auto; } }
 
 /*end of--@media(min-width:300px)*/
 @media only screen and (min-width: 450px) and (max-width: 767px) {
@@ -292,7 +298,13 @@ span.carousel-control-prev-icon, span.carousel-control-next-icon {
   .photo img {
     display: block;
     margin: 0 auto;
-    margin-bottom: 1.2em; } }
+    margin-bottom: 1.2em; }
+  /*
+	#social media
+	*/
+  nav.socialmediaicons ul {
+    width: 110px;
+    margin: 0 auto; } }
 
 @media (max-width: 575px) {
   a.navbar-brand {
